menu toggles correctly

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
 </head>
 <body>
 
+  <!-- The text that toggles the menu label -->
+  <span id="mobile__menu-toggle">
+    <span class="mobile__menu-container">
+      <span id="menu" class="mobile__menu-label">MENU</span>
+      <span id="close-menu" class="mobile__menu-label">CLOSE</span>
+    </span>
+  </span>
+
+  <!-- The menu for mobile/tablet -->
+  <section id="mobile__menu">
+    <ul id="mobile__menu-list">
+      <li class="mobile__menu-item">
+        <a href="" class="mobile__menu-link">HOME</a>
+      </li>
+      <li class="mobile__menu-item">
+        <a href="" class="mobile__menu-link">PORTFOLIO</a>
+      </li>
+      <!-- <li class="mobile__menu-item">
+        <a href="" class="mobile__menu-link">BLOG</a>
+      </li> -->
+      <li class="mobile__menu-item">
+        <a href="" class="mobile__menu-link">CONTACT</a>
+      </li>
+    </ul>
+  </section>
+
+
+
+
   <script src='./build/js/index.js'></script>
 </body>
 </html>
