worked out how to make some css files do critical css others stay as assets. other tweaks

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="/css/stylesheet.css">
   <title>Adam J Berkowitz</title>
 </head>
 <body>
@@ -32,6 +33,12 @@
     </ul>
   </section>
 
+  <!-- hero starts here -->
+  <section id="hero">
+    <div id="hero__container">
+
+    </div>
+  </section>
 
 
 
