needs a better tagline. going to fix hero image size and rem for media queries.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
   </section>
 
   <section id="intro">
-    <div class="container">
-      
+    <div class="intro__container">
+      <!-- <div class="intro__container-image">
+        <img src="/images/headshot.jpg" alt="Adam J Berkowitz" class="intro__image">
+      </div> -->
+      <div class="intro__container-text">
+        <!-- needs a different tag line. -->
+        <p class="intro__text">
+          Hello.<br />I'm Adam.<br/>I make beautiful websites.<br />Let me show you how.
+        </p>
+      </div>
     </div>
   </section>
 
