starting to add & organize below fold content

--- a/index.html
+++ b/index.html
@@ -64,6 +64,46 @@
     </div>
   </section>
 
+  <section id="about">
+    <h1 class="about__header">
+      About me
+    </h1>
+    <div class="about__outer">
+      <div class="about__container">
+        <img src="/images/headshot.jpg" alt="Adam Berkowitz" class="about__image">
+      </div>
+      <div class="about__container">
+        <p class="about__text">For the last eight years I have been a professional clarinetist and teacher at the University of Hartford's Hartt Community Division. In my new career as a web developer I believe that my skills as a musician (attention to detail, willingness to experiment, devotion to practicing a craft) will help me succeed on this new path. When I'm not coding or practicing, my family is the major influence on my life. My wife and I have two sons one of whom has Fragile X Syndrome (FXS) and the other is a carrier. You can learn a lot more about FXS by taking the quiz I developed in JavaScript.
+        <br />
+        My current goals as a developer are to learn as much as I can both about music and the web as well as accessibility for people with special needs. It is my hope that this way I can combine these important aspects of my life with technology and coding.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="projects">
+    <h1 class="project__header">
+      Selected Work
+    </h1>
+    <div class="project">
+      <!-- examples of some of the best/coolest projects w/ testimonials -->
+      <div class="project__image-container">
+        <img src="" alt="" class="project__image">
+      </div>
+      <div class="project__description">
+        <p class="project__description-testimonial"><em>Hold text</em></p>
+        <p class="project__description-text">Hold text</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="skills">
+    <h1 class="skills__header">Skills</h1>
+    <div class="skills__container">
+      <!-- holds list of skills -->
+    </div>
+  </section>
+  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/stylesheet.css">
   <script src='/js/index.js'></script>
 </body>
