better media queries

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       <!-- <div class="intro__container-image">
         <img src="/images/headshot.jpg" alt="Adam J Berkowitz" class="intro__image">
       </div> -->
-      <div class="intro__container-text">
+      <!-- <div class="intro__container-text"> -->
         <!-- needs a different tag line. -->
         <p class="intro__text">
           Hello.<br />I'm Adam.<br/>I build websites.<br />Let me show you.
         </p>
-      </div>
+      <!-- </div> -->
       <!-- <div class="intro__arrow"></div> -->
     </div>
   </section>
