switched intro and hero sections. moved on to organizing projects.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
   </section>
 
   <!-- hero starts here -->
-  <section id="hero">
-    <div id="hero__container">
-      <!-- placeholder for the background image -->
-    </div>
-  </section>
+
 
   <section id="intro">
     <div class="intro__container">
@@ -64,22 +60,13 @@
     </div>
   </section>
 
-  <section id="about">
-    <h1 class="about__header">
-      About me
-    </h1>
-    <div class="about__outer">
-      <div class="about__container">
-        <img src="/images/headshot.jpg" alt="Adam Berkowitz" class="about__image">
-      </div>
-      <div class="about__container">
-        <p class="about__text">For the last eight years I have been a professional clarinetist and teacher at the University of Hartford's Hartt Community Division. In my new career as a web developer I believe that my skills as a musician (attention to detail, willingness to experiment, devotion to practicing a craft) will help me succeed on this new path. When I'm not coding or practicing, my family is the major influence on my life. My wife and I have two sons one of whom has Fragile X Syndrome (FXS) and the other is a carrier. You can learn a lot more about FXS by taking the quiz I developed in JavaScript.
-        <br />
-        My current goals as a developer are to learn as much as I can both about music and the web as well as accessibility for people with special needs. It is my hope that this way I can combine these important aspects of my life with technology and coding.
-        </p>
-      </div>
+  <section id="hero">
+    <div id="hero__container">
+      <!-- placeholder for the background image -->
     </div>
   </section>
+
+
 
   <section id="projects">
     <h1 class="project__header">
@@ -87,16 +74,23 @@
     </h1>
     <div class="project">
       <!-- examples of some of the best/coolest projects w/ testimonials -->
+      <figure>
+        <blockquote class="project__description-testimonial">
+          I recommend Adam Berkowitz's web design services without any reservations. Adam is responsive, creative, intuitive, and was willing to research new technologies in order to maximize my organization's site. I plan to use Adam's services for years to come. Thank you, Adam!
+          <p>Jonathan Palant - Director</p>
+        </blockquote>
+      </figure>
+
       <div class="project__image-container before__container">
         <p class="project__description-text">Before</p>
-        <img src="/images/projects/credo-choir-before.jpg" alt="Credo Choir before" class="project__image">
+        <img src="images/projects/credo-choir-before.jpg" alt="Credo Choir before" class="project__image">
       </div>
       <div class="project__image-container after__container">
         <p class="project__description-text">After</p>
-        <img src="/images/projects/credo-choir-after.jpg" alt="Credo Choir after" class="project__image">
+        <img src="images/projects/credo-choir-after.jpg" alt="Credo Choir after" class="project__image">
       </div>
       <div class="project__description">
-        <p class="project__description-testimonial"><em>Hold text</em></p>
+
         <p class="project__description-text">
           I helped CREDO change and update the design of their old website at no charge. They are a non-profit ecumenical choir in Dallas, TX. Jonathan Palant (CREDO's director/conductor) was interested in keeping the same basic content on the site while making it easier to use. Since CREDO already had Wordpress installed, we worked together to select a new theme, coloring, and overall style. Some features of the new site include:
         </p>
@@ -109,91 +103,111 @@
     </div>
   </section>
 
-  <section id="skills">
-    <h1 class="skills__header">Skills</h1>
-    <div class="skills__container">
-      <div class="skills__container-full">
-        <h2 class="skills__header-subsection">
-          Web Development
-        </h2>
-        <div class="skills__container-subsection">
-          <p class="skills__list-group">LANGUAGES</p>
-          <ul class="skills__list">
-            <li class="skills__list-item">HTML5</li>
-            <li class="skills__list-item">CSS3/Sass</li>
-            <li class="skills__list-item">JavaScript/jQuery</li>
-          </ul>
-        </div>
-        <div class="skills__container-subsection">
-          <p class="skills__list-group">FRAMEWORKS</p>
-          <ul class="skills__list">
-            <li class="skills__list-item">React/Redux</li>
-            <li class="skills__list-item">Bootstrap 3</li>
-            <li class="skills__list-item">Bourbon/Neat</li>
-          </ul>
-        </div>
-        <div class="skills__container-subsection">
-          <p class="skills__list-group">UTILITIES</p>
-          <ul class="skills__list">
-            <li class="skills__list-item">BEM</li>
-            <li class="skills__list-item">git/github</li>
-            <li class="skills__list-item">npm</li>
-            <li class="skills__list-item">Gulp</li>
-            <li class="skills__list-item">Webpack</li>
-          </ul>
-        </div>
-        <div class="skills__container-subsection">
-          <p class="skills__list-group">SERVER SIDE</p>
-          <ul class="skills__list">
-            <li class="skills__list-item">Node</li>
-            <li class="skills__list-item">Express</li>
-            <li class="skills__list-item">Mocha/Chai</li>
-            <li class="skills__list-item">MongoDB</li>
-          </ul>
-        </div>
-        <div class="skills__container-subsection">
-          <p class="skills__list-group">WEB AUDIO</p>
-          <ul class="skills__list">
-            <li class="skills__list-item">Tone.JS</li>
-            <li class="skills__list-item">NexusUI</li>
-          </ul>
-        </div>
-        <div class="skills__container-subsection">
-          <p class="skills__list-group">OTHER</p>
-          <ul class="skills__list">
-            <li class="skills__list-item">Leaflet.JS</li>
-          </ul>
-        </div>
-      </div>
-      <div class="skills__container-half">
-        <h2 class="skills__header-subsection">NON-TECHNICAL</h2>
-        <div class="skills__container-subsection">
-          <ul class="skills__list">
-            <li class="skills__list-item">Education and Instructional Development</li>
-            <li class="skills__list-item">Presentation and Performance</li>
-            <li class="skills__list-item">Written and Verbal Communication</li>
-            <li class="skills__list-item">Text Editing</li>
-          </ul>
-        </div>
-      </div>
-      <div class="skills__container-half">
-        <h2 class="skills__header-subsection">INTERESTS</h2>
-        <div class="skills__container-subsection">
-          <ul class="skills__list">
-            <li class="skills__list-item">Martial Arts</li>
-            <li class="skills__list-item">Cooking</li>
-            <li class="skills__list-item">MeteorJS</li>
-            <li class="skills__list-item">Clarinet/Bass Clarinet</li>
-            <li class="skills__list-item">Max7</li>
-            <li class="skills__list-item">Max for Live</li>
-            <li class="skills__list-item">Ableton Live</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/stylesheet.css">
   <script src='/js/index.js'></script>
 </body>
 </html>
+
+
+<!-- <section id="about">
+  <h1 class="about__header">
+    About me
+  </h1>
+  <div class="about__outer">
+    <div class="about__container">
+      <img src="/images/headshot.jpg" alt="Adam Berkowitz" class="about__image">
+    </div>
+    <div class="about__container">
+      <p class="about__text">For the last eight years I have been a professional clarinetist and teacher at the University of Hartford's Hartt Community Division. In my new career as a web developer I believe that my skills as a musician (attention to detail, willingness to experiment, devotion to practicing a craft) will help me succeed on this new path. When I'm not coding or practicing, my family is the major influence on my life. My wife and I have two sons one of whom has Fragile X Syndrome (FXS) and the other is a carrier. You can learn a lot more about FXS by taking the quiz I developed in JavaScript.
+      <br />
+      My current goals as a developer are to learn as much as I can both about music and the web as well as accessibility for people with special needs. It is my hope that this way I can combine these important aspects of my life with technology and coding.
+      </p>
+    </div>
+  </div>
+</section> -->
+
+<!-- <section id="skills">
+  <h1 class="skills__header">Skills</h1>
+  <div class="skills__container">
+    <div class="skills__container-full">
+      <h2 class="skills__header-subsection">
+        Web Development
+      </h2>
+      <div class="skills__container-subsection">
+        <p class="skills__list-group">LANGUAGES</p>
+        <ul class="skills__list">
+          <li class="skills__list-item">HTML5</li>
+          <li class="skills__list-item">CSS3/Sass</li>
+          <li class="skills__list-item">JavaScript/jQuery</li>
+        </ul>
+      </div>
+      <div class="skills__container-subsection">
+        <p class="skills__list-group">FRAMEWORKS</p>
+        <ul class="skills__list">
+          <li class="skills__list-item">React/Redux</li>
+          <li class="skills__list-item">Bootstrap 3</li>
+          <li class="skills__list-item">Bourbon/Neat</li>
+        </ul>
+      </div>
+      <div class="skills__container-subsection">
+        <p class="skills__list-group">UTILITIES</p>
+        <ul class="skills__list">
+          <li class="skills__list-item">BEM</li>
+          <li class="skills__list-item">git/github</li>
+          <li class="skills__list-item">npm</li>
+          <li class="skills__list-item">Gulp</li>
+          <li class="skills__list-item">Webpack</li>
+        </ul>
+      </div>
+      <div class="skills__container-subsection">
+        <p class="skills__list-group">SERVER SIDE</p>
+        <ul class="skills__list">
+          <li class="skills__list-item">Node</li>
+          <li class="skills__list-item">Express</li>
+          <li class="skills__list-item">Mocha/Chai</li>
+          <li class="skills__list-item">MongoDB</li>
+        </ul>
+      </div>
+      <div class="skills__container-subsection">
+        <p class="skills__list-group">WEB AUDIO</p>
+        <ul class="skills__list">
+          <li class="skills__list-item">Tone.JS</li>
+          <li class="skills__list-item">NexusUI</li>
+        </ul>
+      </div>
+      <div class="skills__container-subsection">
+        <p class="skills__list-group">OTHER</p>
+        <ul class="skills__list">
+          <li class="skills__list-item">Leaflet.JS</li>
+        </ul>
+      </div>
+    </div>
+    <div class="skills__container-half">
+      <h2 class="skills__header-subsection">NON-TECHNICAL</h2>
+      <div class="skills__container-subsection">
+        <ul class="skills__list">
+          <li class="skills__list-item">Education and Instructional Development</li>
+          <li class="skills__list-item">Presentation and Performance</li>
+          <li class="skills__list-item">Written and Verbal Communication</li>
+          <li class="skills__list-item">Text Editing</li>
+        </ul>
+      </div>
+    </div>
+    <div class="skills__container-half">
+      <h2 class="skills__header-subsection">INTERESTS</h2>
+      <div class="skills__container-subsection">
+        <ul class="skills__list">
+          <li class="skills__list-item">Martial Arts</li>
+          <li class="skills__list-item">Cooking</li>
+          <li class="skills__list-item">MeteorJS</li>
+          <li class="skills__list-item">Clarinet/Bass Clarinet</li>
+          <li class="skills__list-item">Max7</li>
+          <li class="skills__list-item">Max for Live</li>
+          <li class="skills__list-item">Ableton Live</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section> -->
